fix: Delete z-index to container

--- a/src/components/atoms/container/container.scss
+++ b/src/components/atoms/container/container.scss
@@ -3,5 +3,4 @@
     max-width:60rem;
     padding: 0 1rem;
     margin: auto;
-    z-index: 1;
 }
